--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,18 @@
   "buildCommand": "",
   "outputDirectory": ".",
   "framework": null,
-  "installCommand": ""
+  "installCommand": "",
+  "redirects": [
+    {
+      "source": "/(.*)",
+      "destination": "https://game.htpu.net/$1",
+      "statusCode": 302,
+      "has": [
+        {
+          "type": "host",
+          "value": "chess.htpu.net"
+        }
+      ]
+    }
+  ]
 }
